--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,10 @@ body {
   overflow:auto;
   align-items: center;
   text-align: center;
+  font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
   
 }
 
@@ -48,6 +52,10 @@ body {
   overflow:auto;
   align-items: center;
   text-align: center;
+  font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
 }
 
 .job {
@@ -64,6 +72,10 @@ body {
   overflow:auto;
   align-items: center;
   text-align: center;
+  font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
 }
 
 
